Fix crash when ModeMenuList wasn't init but we try to reload it

BUG: 452282